# one_note_to_xopp

./: .gitignore  Cargo.toml  LICENSE.md  README.md  convert.sh  install.md
src/: cli.rs  main.rs
